# task-scheduler-sdk

./: README.md  pyproject.toml
.claude/: settings.local.json
src/interactions_sdk/: __init__.py  _protocol.py
src/task_scheduler_sdk/: __init__.py  _protocol.py
tests/: test_sdk.py
